--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,18 @@ body {
   padding: 0;
 }
 
+header {
+  height: 65vh;
+  min-height: 350px;
+  background: no-repeat center center scroll;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+
+
 .bd-placeholder-img {
   font-size: 1.125rem;
   text-anchor: middle;
